# stock-data

./: .gitignore  README.md  main.py  pyproject.toml
api/: vantage_api_client.py
exception/: vantage_api_exception.py
indication/: indication_calculator.py
