[tool.poetry]
name = "stock-data"
version = "1.0.0"
description = "Client that uses pandas and some linear regression to identify stock trends"
authors = ["Oscar"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
